tests/pos/i18529/SCode2.scala
package bug.code

import bug.util.*
import bug.util.List
import java.util.*

class SCode2 {
  def work(xs: List[Int]): Unit = {}
}
