tests/neg/i20245/Unification_1.scala
package effekt
package typer

import effekt.util.messages.ErrorReporter


class Unification(using C: ErrorReporter) {

  def requireSubtype(): Unit = ()

}
